welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	
	def finish():boolean = {
		if (estFaceMur()) {
		if (getDirection() == Direction.EST) {gauche()}
		else {droite()}
		if (estFaceMur()) {return true}
		return false
	}}

	def serpent() {
		if (!estFaceMur()) {avance()}
		else {
			if (getDirection() == Direction.EST) {gauche();avance();gauche()}
			else {droite();avance();droite()}
		}
	}

	baisseBrosse()
	while (!finish()) {serpent()}
	
}
